run github workflow on push to main

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,7 +1,9 @@
 name: Update Homebrew Tap
 
 on:
-  workflow_dispatch:  # Manual trigger only
+  push:
+    branches:
+      - main
 
 jobs:
   update:
